<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/nameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/teal_200"/>

    <EditText
        android:id="@+id/ageET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:inputType="number"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/teal_200"/>

    <EditText
        android:id="@+id/genderET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gender"
        android:textSize="20sp"
        android:textColor="@color/teal_200"
        android:textColorHint="@color/teal_200"/>
</LinearLayout>
